--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -51,3 +51,25 @@ footer {
     margin: 0 0 10px 10px;
 }
 
+.menuSection {
+    margin: 5px 0;
+    padding: 5px 0;
+    clear: left;
+}
+
+.menuContent {
+    margin-left: 88px;
+}
+
+.iconSection {
+    float: left;
+    padding: 0 10px 0 0;
+}
+
+a, a:hover, a:visited {
+    text-decoration: none;
+}
+
+a.activationLink {
+    font-size: 1.2em;
+}
