Added 'start' theme and changed the layout of the slider to be all on one line

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -85,9 +85,20 @@ a.activationLink {
 }
 
 .sliderContainer {
-    padding: 10px !important;
+    padding: 10px 10px 10px 0!important;
+    clear: left;
 }
 
-#sliderTime {
+.sliderTimeWrapper {
+    float: left;
+    width: 150px;
+}
+
+.sliderTime {
     font-weight: bold;
 }
+
+#slider {
+    margin-left: 150px;
+}
+
