--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,4 +1,4 @@
-html, body, #map_wrapper, #right, .main {
+html, body, #map_wrapper, #right, .main, #body {
     height: 100%;
     width: 100%;
 }
@@ -8,6 +8,11 @@ body, .main {
     font-family: Arial, sans-serif;
 }
 
+address {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
 #map_canvas {
     min-width: 500px;
     min-height: 500px;
@@ -15,14 +20,12 @@ body, .main {
     width: 100%;
 }
 
-header {
-    height: 90px;
-}
-
 header h1 {
-    font-size: 2.5em;
-    padding: 20px;
+    font-size: 2em;
+    padding: 10px;
     margin: 0;
+    background-color: #256188;
+    color: white;
 }
 
 #right {
@@ -56,13 +59,23 @@ footer {
 }
 
 .menuSection {
-    margin: 5px 0;
-    padding: 5px 0;
+    margin: 10px 0 0px 0;
+    padding: 10px 0 0 0;
+    clear: left;
+}
+
+.truckSection {
+    padding-bottom: 10px;
+    min-height: 48px;
     clear: left;
 }
 
 .menuContent {
     margin-left: 95px;
+}
+
+.locationContent {
+    margin-left: 47px;
 }
 
 .markerSection {
@@ -102,3 +115,8 @@ a.activationLink {
     margin-left: 150px;
 }
 
+div.flash {
+    background-color: #90ee90;
+    padding:  10px;
+    font-weight: bold;
+}
