--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -3,6 +3,11 @@ html, body, #map_wrapper, #right, .main, #body {
     width: 100%;
 }
 
+#buttonSection {
+    padding-top:  10px;
+    float: right;
+}
+
 body, .main {
     padding: 0;
     font-family: Arial, sans-serif;
@@ -20,12 +25,25 @@ address {
     width: 100%;
 }
 
+header {
+    background-color: #256188;
+    color: white;
+    min-height: 52px;
+}
+
+#body {
+    clear: both;
+}
+
+.twitter-follow-button {
+    color: white !important;
+}
+
 header h1 {
     font-size: 2em;
     padding: 10px;
     margin: 0;
-    background-color: #256188;
-    color: white;
+    float: left;
 }
 
 #right {
