--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -4,7 +4,7 @@ html, body, #map_wrapper, #right, .main, #body {
 }
 
 #buttonSection {
-    padding-top:  10px;
+    padding-top: 10px;
     float: right;
 }
 
@@ -68,7 +68,6 @@ header h1 {
     width: 400px;
     margin-left: -100%;
     max-height: 100%;
-    overflow-y: auto;
     z-index: 0;
     position: relative;
 }
@@ -101,6 +100,7 @@ footer {
 .truckLeft {
     margin-left: 50px;
 }
+
 .truckGroup {
     padding: 15px 0;
 }
@@ -113,6 +113,10 @@ footer {
 
 .truckSectionTextOnly {
     padding: 10px 0;
+}
+
+#foodTruckList {
+    overflow-y: auto;
 }
 
 .menuContent {
@@ -143,7 +147,7 @@ a.activationLink {
 }
 
 .sliderContainer {
-    padding: 10px 10px 10px 0!important;
+    padding: 10px 10px 10px 0 !important;
     clear: left;
 }
 
@@ -162,7 +166,7 @@ a.activationLink {
 
 div.flash {
     background-color: #90ee90;
-    padding:  10px;
+    padding: 10px;
     font-weight: bold;
 }
 
