--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -173,3 +173,20 @@ div.flash {
 .hilightedSection {
     background-color: #EAEaEA;
 }
+
+.iconList {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+li.iconListItem {
+    background-repeat: no-repeat;
+    background-position: 0 50%;
+    padding: 20px 52px 20px 70px;
+    margin: .4em 0;
+}
+
+.infoWindowContent {
+    margin: 10px;
+}
