Made menu section for a truck a bit cleaner

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -194,3 +194,13 @@ li.iconListItem {
 .markerIcon:hover {
     cursor: pointer;
 }
+
+a.truckLink {
+    font-size: 1.2em;
+    text-decoration: none !important;
+    color: blue !important;
+}
+
+.infoRow {
+    padding-top: 5px;
+}
