Checking in time dialog w/ display-none set.  Also, remove min-width/min-height attributes from map

--- a/foodtruckfinderapp/src/main/webapp/css/main.css
+++ b/foodtruckfinderapp/src/main/webapp/css/main.css
@@ -27,8 +27,6 @@ address.mobile {
 }
 
 #map_canvas {
-    min-width: 500px;
-    min-height: 500px;
     height: 100%;
     width: 100%;
 }
@@ -203,4 +201,8 @@ a.truckLink {
 
 .infoRow {
     padding-top: 5px;
+}
+
+.timeSelect {
+    display: none;
 }
