--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -149,6 +149,11 @@ a.activationLink {
     font-size: 1.2em;
 }
 
+#locationFilter {
+    padding:  10px 0 0 0;
+    display: none;
+}
+
 .sliderContainer {
     padding: 10px 10px 10px 0 !important;
     clear: left;
