Initial re-worked time-view

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,218 +1,15 @@
-html, body, #map_wrapper, #right, .main, #body {
-    height: 100%;
-    width: 100%;
+body {
+    padding-top: 40px;
 }
 
-#buttonSection {
-    padding-top: 10px;
-    float: right;
+.container-fluid > .sidebar {
+    width: 300px;
 }
 
-body, .main {
-    padding: 0;
-    font-family: Arial, sans-serif;
+.container-fluid > .content {
+    margin-left: 320px;
 }
 
-address {
-    font-size: 1.2em;
-    font-weight: bold;
-}
-
-address.mobile {
-    background-color: #256188;
-    color: white;
-    padding: 10px 5px;
-    display: block;
-    margin-bottom: 5px;
-}
-
-#map_canvas {
-    height: 100%;
-    width: 100%;
-}
-
-header {
-    background-color: #256188;
-    color: white;
-    min-height: 52px;
-}
-
-#body {
-    clear: both;
-}
-
-.twitter-follow-button {
-    color: white !important;
-}
-
-header h1 {
-    font-size: 2em;
-    padding: 10px;
-    margin: 0;
-    float: left;
-}
-
-h3 {
-    padding: 5px 0;
-    margin: 5px 0 0 0;
-}
-
-#right {
-    float: left;
-    width: 100%;
-}
-
-#map_wrapper {
-    margin-left: 425px;
-}
-
-#left {
-    float: left;
-    width: 425px;
-    margin-left: -100%;
-    max-height: 100%;
-    z-index: 0;
-    position: relative;
-}
-
-footer {
-    clear: left;
-    width: 100%;
-    text-align: center;
-    padding: 4px 0;
-}
-
-.section {
-    margin: 0 0 10px 10px;
-}
-
-.menuSection, .truckSectionTextOnly {
-    margin: 10px 0 0px 0;
-    padding: 10px;
-    clear: left;
-}
-
-.menuSection:after, .truckSectionTextOnly:after {
-    content: ".";
-    display: block;
-    height: 0;
-    clear: both;
-    visibility: hidden;
-}
-
-.truckLeft {
-    margin-left: 50px;
-}
-
-.truckGroup {
-    padding: 15px 0;
-}
-
-.truckSection {
-    padding-bottom: 10px;
-    min-height: 48px;
-    clear: left;
-}
-
-.truckSectionTextOnly {
-    padding: 10px 0;
-}
-
-#foodTruckList {
-    overflow-y: auto;
-}
-
-.menuContent {
-    margin-left: 70px;
-}
-
-.locationContent {
-    margin-left: 35px;
-}
-
-.markerSection {
-    float: left;
-    width: 25px;
-    padding: 0 10px 0 0;
-}
-
-.iconSection {
-    float: left;
-    padding: 0 10px 0 0;
-}
-
-a, a:hover, a:visited {
-    text-decoration: none;
-}
-
-a.activationLink {
-    font-size: 1.2em;
-}
-
-#locationFilter {
-    padding:  10px 0 0 0;
-    display: none;
-}
-
-.sliderContainer {
-    padding: 10px 10px 10px 0 !important;
-    clear: left;
-}
-
-.sliderTimeWrapper {
-    float: left;
-    width: 150px;
-}
-
-.sliderTime {
-    font-weight: bold;
-}
-
-#slider {
-    margin-left: 150px;
-}
-
-div.flash {
-    background-color: #90ee90;
-    padding: 10px;
-    font-weight: bold;
-}
-
-.hilightedSection {
-    background-color: #EAEaEA;
-}
-
-.iconList {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-li.iconListItem {
-    background-repeat: no-repeat;
-    background-position: 0 50%;
-    padding: 20px 52px 20px 70px;
-    margin: .4em 0;
-}
-
-.infoWindowContent {
-    margin: 10px;
-}
-
-.markerIcon:hover {
-    cursor: pointer;
-}
-
-a.truckLink {
-    font-size: 1.1em;
-    text-decoration: none !important;
-    color: blue !important;
-}
-
-.infoRow {
-    padding-top: 5px;
-}
-
-.timeSelect {
-    display: none;
+.well {
+    margin-top: 10px;
 }
