--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,26 +1,27 @@
-.navbar {
-    margin-bottom: 0;
-}
-.sidebar {
-    padding-right : 10px;
+.cftf-header {
+  background-color: #333;
+  color: #f2f2f2;
 }
 
-.well {
-    margin-top: 10px;
+.cftf-header  a {
+  color: #f2f2f2;
 }
 
-#foodTruckList {
-    overflow-y: auto;
+.navbar-nav > li > a:hover, .navbar-nav > li.active > a {
+  background-color: black;
+}
+
+.cftf-main-container {
+  padding-top:60px;
+}
+/* adjusts the background color of the dropdown when open */
+.nav > .open>a {
+  background-color: black !important;
 }
 
 address.locationName {
     font-weight: bold;
     font-size: 110%;
-}
-
-.iconSection {
-    float: left;
-    padding: 0 10px 0 0;
 }
 
 .truckLeft {
