--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,3 +1,9 @@
+@media screen {
+  body {
+    background-color: gray;
+  }
+}
+
 thead tr {
   background-color: lightgrey;
   border-color: lightgrey;
@@ -29,7 +35,10 @@ li.active {
 }
 
 .cftf-main-container {
-  padding-top:60px;
+  margin-top:60px;
+  padding-top:20px;
+  padding-bottom: 20px;
+  background-color:white;
 }
 /* adjusts the background color of the dropdown when open */
 .nav > .open>a {
