Remove gray background when we're on a small display

--- a/src/main/webapp/css/dashboard.css
+++ b/src/main/webapp/css/dashboard.css
@@ -1,8 +1,16 @@
 td.gutter {
   width: 2px;
 }
+
 tr.selected td.gutter {
   background-color: #be9a3f !important;
+}
+
+
+@media only screen and (max-width: 800px) {
+  body {
+    background-color: white;
+  }
 }
 
 .twitter-typeahead, .tt-hint {
