--- a/src/main/webapp/css/foodtruckfinder.css
+++ b/src/main/webapp/css/foodtruckfinder.css
@@ -77,6 +77,7 @@ address.locationName {
   background-color: #183864 !important;
   color: white !important;
   background-repeat: no-repeat;
+  background-size:100%;
 }
 
 .whitelink {
