--- a/src/main/webapp/css/foodtruckfinder-fluid.css
+++ b/src/main/webapp/css/foodtruckfinder-fluid.css
@@ -14,7 +14,6 @@
 
 .cftf-main-container {
     margin-top:50px;
-    padding-right:10px;
     background-color:white;
 }
 /* adjusts the background color of the dropdown when open */
@@ -55,3 +54,10 @@ address.locationName {
     color: white !important;
 }
 
+div.row {
+    padding: 20px;
+}
+
+.breadcrumb {
+    display:none;
+}
