--- a/src/main/webapp/css/foodtruckfinder-fluid.css
+++ b/src/main/webapp/css/foodtruckfinder-fluid.css
@@ -61,3 +61,18 @@ div.row {
 .breadcrumb {
     display:none;
 }
+
+.previewIcon {
+    position: absolute;
+    top: -140px;
+    left: 50px;
+    border: 5px white solid;
+}
+
+.top-row {
+    padding-bottom:0 !important;
+}
+
+.second-top-row {
+    padding-top:0 !important;
+}
