--- a/main/src/main/webapp/css/front-page-1.3.1.css
+++ b/main/src/main/webapp/css/front-page-1.3.1.css
@@ -1,12 +1,11 @@
 h2 {
-  background-color: #5e5e5e;
-  color: white;
-  margin: 15px 15px 15px 0px;
-  padding: 5px 0 5px 10px;
+  color: black;
+  margin: 15px 15px 15px -10px;
+  padding: 5px 0 5px 0;
 }
 
 h2 a, h2 a:hover {
-  color: white;
+  color: black;
 }
 
 div.truck-row {
