--- a/main/src/main/webapp/css/foodtruckfinder-1.5.css
+++ b/main/src/main/webapp/css/foodtruckfinder-1.5.css
@@ -19,3 +19,9 @@
   color: rgba(255,255,255,.5);
   font-weight: bold;
 }
+
+h2.date-header {
+  background-color: #5e5e5e;
+  color: white;
+  padding: 5px 0 5px 10px;
+}
