--- a/main/src/main/webapp/css/foodtruckfinder.css
+++ b/main/src/main/webapp/css/foodtruckfinder.css
@@ -101,3 +101,10 @@ address.locationName {
     display:none;
   }
 }
+
+
+h2.date-header {
+  background-color: #5e5e5e;
+  color: white;
+  padding: 5px 0 5px 10px;
+}
