Have truck display word-wrap urls

--- a/main/src/main/webapp/css/ftf.css
+++ b/main/src/main/webapp/css/ftf.css
@@ -27,5 +27,9 @@ h2.date-header {
 }
 
 .social-icons a {
-  color: #444!important;
+  font-size:2em;
+}
+
+div.contact-section {
+  word-wrap: break-word;
 }
